FIX: Hide navbar links on mobile, collapse nav dropdown after click

--- a/site.css
+++ b/site.css
@@ -2,3 +2,10 @@
     margin:0.5rem; 
     padding:0.5rem;
 }
+
+@media screen and (max-width: 992px) {
+    .my-nav-contact-links {
+        visibility: none;
+        display: none;
+    }
+  }
